Updated .po Release 3.6 for test

--- a/locale/en/LC_MESSAGES/docs-gofast-technical/release-notes-3.6.0.po
+++ b/locale/en/LC_MESSAGES/docs-gofast-technical/release-notes-3.6.0.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:3
 msgid "GoFAST :  Version 3.6.0"
-msgstr ""
+msgstr "GoFAST :  Version 3.6.0"
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:7
 msgid "Nouvelles fonctionnalités"
@@ -28,7 +28,7 @@ msgstr "New Features"
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:1
 msgid "Ref."
-msgstr ""
+msgstr "Ref"
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:1
 msgid "Description"
@@ -60,11 +60,11 @@ msgstr ""
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:5
 msgid "meilleures performances"
-msgstr ""
+msgstr "improved performances"
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:6
 msgid "Voir : https://bit.ly/2UZP5Lp"
-msgstr ""
+msgstr "See : https://bit.ly/2UZP5Lp"
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:1
 msgid "[Enterprise]"
