--- a/locale/en/LC_MESSAGES/docs-gofast-technical/release-notes-3.6.0.po
+++ b/locale/en/LC_MESSAGES/docs-gofast-technical/release-notes-3.6.0.po
@@ -56,7 +56,7 @@ msgstr "new features"
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:4
 msgid "nouvelles notifications"
-msgstr ""
+msgstr "new notifications"
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:5
 msgid "meilleures performances"
@@ -82,7 +82,7 @@ msgstr ""
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:3
 msgid "Voir : https://bit.ly/2Xk8ZxV"
-msgstr ""
+msgstr "See : https://bit.ly/2Xk8ZxV"
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:1
 msgid "[4262]"
