Updated .po Release 3.6 for test

--- a/locale/en/LC_MESSAGES/docs-gofast-technical/release-notes-3.6.0.po
+++ b/locale/en/LC_MESSAGES/docs-gofast-technical/release-notes-3.6.0.po
@@ -144,7 +144,7 @@ msgstr ""
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:1
 msgid "Nouvelles API supplémentaires pour BonitaSoft"
-msgstr ""
+msgstr "New API for BonitaSoft"
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:1
 msgid "[1640]"
