Updated .po for Release 3.6 test

--- a/locale/en/LC_MESSAGES/docs-gofast-technical/release-notes-3.6.0.po
+++ b/locale/en/LC_MESSAGES/docs-gofast-technical/release-notes-3.6.0.po
@@ -158,7 +158,7 @@ msgstr ""
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:3
 msgid "Voir : https://bit.ly/2UoTfYC"
-msgstr ""
+msgstr "See : https://bit.ly/2UoTfYC"
 
 #: ../../docs-gofast-technical/release-notes-3.6.0.rst:1
 msgid "[Community en v3.6.1][Enterprise]"
